--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ nom = "7"
 convert_case = "0.6"
 checksumdir = "0.3"
 t4_idl_parser = { path = "../idl_parser" }
+num-bigint = "0.4"
+num-traits = "0.2"
+
